# c-cpp

./: .gitignore  README.md
c++/basico/: hello.cpp  vetor.cpp
c++/lista1/: exer1.cpp  exer2.cpp  exer3.cpp  exer4.cpp  exer5.cpp  exer6.cpp
c++/vetor2d/: CMakeLists.txt  main.cpp  vetor2d.cpp  vetor2d.h
c/Ponteiros/: README.md
c/lista1/: Makefile  README.md
c/lista1/src/: README.md  exer1.c  exer10.c  exer11.c  exer12.c  exer13.c  exer14.c  exer15.c  exer2.c  exer3.c  exer4.c  exer5.c  exer6.c  exer7.c  exer8.c  exer9.c
c/lista2/src/: README.md  exer1.c  exer2.c  exer3.c  exer4.c
c/lista3/src/: README.md  exer1.c  exer2.c  exer3.c  exer4.c
c/ponteiros/src/: README.md  exer1.c  exer10.c  exer11.c  exer12.c  exer13.c  exer14.c  exer15.c  exer16.c  exer17.c  exer18.c  exer19.c  exer2.c  exer20.c  exer21.c  exer22.c  exer23.c  exer24.c  exer25.c  exer3.c  exer4.c  exer5.c  exer6.c  exer7.c  exer8.c  exer9.c
